--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -13,7 +13,7 @@
 
       <p class="body">For more information about the workshop and the speaker, please visit:  <a href="http://rancongress.com/#workshop" class="body-link" target="_blank">here.</a></p>
       <br>
-      <p class="body" class="body-link" style="text-align: center!important;"><a href="http://rancongress.com/RAN17_Workshop.pdf" target="_blank"><b>Workshop Flyer</b></a></p>
+      <p class="body" style="text-align: center!important;"><a class="body-link" href="http://rancongress.com/RAN17_Workshop.pdf" target="_blank"><b>Workshop Flyer</b></a></p>
       <br>
       <!-- <p class="body">As per popular request, the organizing committee has decided to extend the RAN'17 congress to three days (now April 4 - 6, 2017). The new high-level schedule is as follows:</p>
 
