--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,10 +1,30 @@
 <div id="main-slider" class="liquid-slider">
     <div>
       <h2 class="title">1</h2>
-      <p class="bold">ICNB 2017:</p>
-      <p class="body">ICNB'17 will  be held in Barcelona, Spain on April 4 - 6, 2017 at the Alimara Hotel Barcelona.</p>
+      <p class="bold">ICNB 2018:</p>
+      
+      <p class="body">ICNB 2018 will  be held in in Budapest, Hungary on April 10 - 12, 2018 at the Novotel Budapest Centrum.</p>
 
-      <p class="bold">RAN'17 Workshop</p>
+      <p class="bold">RAN'18 Workshop</p>
+      
+      <p class="body">As per popular request, the organizing committee has decided to extend the ICNB'18 conference to three days (April 10 - 12). The new high-level schedule is as follows:</p>
+
+      <ul>
+        <li>Day 1: Workshop(s) and Registration</li>
+        <li>Day 2: Main Track Conference Sessions</li>
+        <li>Day 3: Main Track Conference Sessions and Gala dinner or Cruise tour</li>
+      </ul>
+      
+      <p class="body">Registration for the workshop will be separate from the main conferences. Workshop attendees will receive a certificate of participation. For registration, please visit: <a href="../registration" class="body-link">here</a>.</p>
+
+      <p class="body">More information to follow; we greatly appreciate your patience!</p>
+
+      
+
+    <p class="bold">Poster Board Dimensions:</p>
+      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 110 cm height and 70 cm width.</p> 
+
+      <!-- <p class="bold">RAN'17 Workshop</p>
       <p class="body">International ASET Inc. is proud to present <b>Dr. Vladimir A. Baulin</b> (Universitat Rovira I Virgili, Spain) and <b>Prof. Elena P. Ivanova</b> (Swinburne University of Technology, Australia) as organizers of a dedicated workshop for the 2nd World Congress on Recent Advances in Nanotechnology (RAN'17).</p>
 
       <cenet><p class="body" style="text-align: center!important;"><b>Topic of Workshop:</b> <i>Workshop on Nanostructured Surfaces</i></p>
@@ -14,19 +34,9 @@
       <p class="body">For more information about the workshop and the speaker, please visit  <a href="http://rancongress.com/workshop" class="body-link" target="_blank">the workshop page.</a></p>
       <br>
       <p class="body" style="text-align: center!important;"><a class="body-link" href="http://rancongress.com/RAN17_Workshop.pdf" target="_blank"><b>Workshop Flyer</b></a></p>
-      <br>
-      <!-- <p class="body">As per popular request, the organizing committee has decided to extend the RAN'17 congress to three days (now April 4 - 6, 2017). The new high-level schedule is as follows:</p>
-
-      <ul>
-        <li>Day 1: Workshop(s) and Registration</li>
-        <li>Day 2: Main Track Conference Sessions</li>
-        <li>Day 3: Main Track Conference Sessions and Gala dinner or Cruise tour</li>
-      </ul>
+      <br> -->
       
-      <p class="body">Registration for the workshop will be 121 EURs (VAT included) and separate from the main conferences. Workshop attendees will receive a certificate of participation. For registration, please visit: <a href="../registration" class="body-link">here</a>.</p> -->
 
-      <p class="bold">Poster Board Dimensions:</p>
-      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 130 cm height and 95 cm width.</p>
     </div>          
     <div>
       <h2 class="title">2</h2>
