--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -45,7 +45,7 @@
     </div>
     <div>
       <h2 class="title">3</h2>
-      <p class="bold">Propose Exhibits, Workshops &amp; More</p>
-      <p class="body">ICNB attracts a wide range of researchers in the field of nanobiotechnology. As a prominent company in the field of nanobiotechnology, we would like to offer you an exhibit at ICNB. Please visit <a href="../events" class="body-link">Events</a> for more information.</p>
+      <p class="bold">Become a Sponsor or an Exhibitor</p>
+      <p class="body">ICNB attracts a wide range of researchers in the field of nanobiotechnology. As a prominent company in the field of nanobiotechnology, we would like to offer you an exhibit at ICNB. Please visit <a href="../sponsor" class="body-link">Sponsors</a> for more information.</p>
     </div>
   </div>
