--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -22,7 +22,7 @@
 }
 
 html {
-  font: normal 100%/1.4 'Merriweather', sans-serif;
+  font: normal 100%/1.4 'Roboto', sans-serif;
   background-color: #FFF;
   overflow-x: hidden!important;
 }
@@ -32,14 +32,15 @@ body {
   padding: 0;
   overflow-x: hidden;
 	overflow: hidden/9;
+  color: #212529;
 }
 
 .flex-logo {
-  width: 100%;
-  vertical-align: text-bottom;
-  max-width: 113px;
-  padding: 1em;
-  float: left;
+	width: 100%;
+	vertical-align: text-bottom;
+	max-width: 113px;
+	padding: 1em;
+	float: left;
 }
 
 .mobile {
@@ -67,12 +68,12 @@ body {
 .flex-sponsor {
 	width: 100%;
 	padding: 1em;
-	  max-width: 200px;
+	max-width: 200px;
 }
 
 .flex-sponsor1 {
 	width: 100%;
-	  max-width: 400px;
+	max-width: 400px;
 }
 
 .sponsor {
@@ -85,7 +86,7 @@ h2 {
   font-weight: 400;
   font-size: 0.84em;
   margin: 0;
-  color: #30A464;
+  color: #69A875;
   text-transform: uppercase;
   line-height: initial;
   letter-spacing: 0.5px;
@@ -99,16 +100,15 @@ font-family: 'Lato', sans-serif;
 text-transform: uppercase;
 font-size: 1.5em;
 margin: 0;
-color: #D04B41;
+color: #37314B;
 }
 
 .body {
-font-family: 'Merriweather', serif;
-font-weight: 300;
+font-family: 'Roboto', sans-serif;
+font-weight: 400;
 font-size: 1em;
 margin: 0;
 padding-bottom: 1em;
-text-align: justify;
 }
 
 .body:last-child {
@@ -116,20 +116,20 @@ padding-bottom: 0;
 }
 
 .bold {
-font-family: 'Merriweather', serif;
-font-weight: 600;
+font-family: 'Roboto', sans-serif;
+font-weight: 700;
 font-size: 1em;
 margin: 0;
 }
 
 .body-link {
-color: #30A464;
+color: #69A875;
 text-decoration: none;
 transition: all 0.8s linear;
 }
 
 .body-link:hover {
-color: #D04B41;
+color: #37314B;
 }
 
 .mob-link {
@@ -156,7 +156,7 @@ ul {
 
 ul li {
 	padding-bottom: 0.5em;
-	font-weight: 100;
+	/*font-weight: 100;*/
 }
 
 blockquote {
@@ -175,7 +175,7 @@ blockquote {
 }
 
 .content tr {
-  border-bottom: 1px solid #30A464;
+  border-bottom: 1px solid #69A875;
 }
 
 th {
@@ -185,7 +185,7 @@ th {
 .date-title {
   display: block;
   padding: 0.5em;
-  background-color: #30A464;
+  background-color: #69A875;
   color: #FFF;
 }
 
@@ -219,12 +219,12 @@ th {
 	text-align: right;
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #D04B41;
+	color: #37314B;
 	transition: all 0.8s ease;
 }
 
 .top:hover {
-	color: #30A464;
+	color: #69A875;
 }
 
 .top:before {
@@ -242,7 +242,7 @@ th {
 }
 
 .keynotes {
-	border-bottom: #D04B41 1px solid;
+	border-bottom: #37314B 1px solid;
 	text-align: left;
 }
 
@@ -251,7 +251,7 @@ th {
 }
 
 .keynotes a {
-	color: #30A464;
+	color: #69A875;
 	text-decoration: none;
 	border-bottom: 1px solid;
 	transition: all 0.3s linear;
@@ -259,7 +259,7 @@ th {
 
 .keynotes a:hover {
 	border-bottom: 2px solid;
-	font-weight: 600;
+	font-weight: 700;
 }
 
 .keynotes .body {
@@ -284,7 +284,7 @@ th {
 .keynote-info .keynote-topic {
 	padding: 1em 0;
 	margin: 0;
-	font-weight: 100;
+	/*font-weight: 100;*/
 }
 
 .keynote-img {
@@ -292,7 +292,7 @@ th {
 }
 
 .pdf {
-	color: #30A464;
+	color: #69A875;
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -300,7 +300,7 @@ th {
 }
 
 .pdf:hover {
-	color: #D04B41;
+	color: #37314B;
 }
 
 .pdf img {
@@ -312,7 +312,7 @@ th {
 }
 
 .keynote-info .top a {
-	color: #D04B41;
+	color: #37314B;
 	font-family: 'Lato', sans-serif;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -320,11 +320,25 @@ th {
 }
 
 .keynote-info .top a:hover {
-	color: #30A464;
+	color: #69A875;
 }
 
 .border {
-	border-bottom: #D04B41 1px solid;
+	border-bottom: #37314B 1px solid;
+}
+
+.keynoteIndex {
+    padding-right: 1em;
+    text-align: center;
+}
+
+.keynoteIndex .body {
+    text-align: center;
+}
+
+.keynoteIndex img {
+    width: 200px;
+    margin: auto;
 }
 
 /* HEADER & NAVIGATION */
@@ -335,7 +349,7 @@ h1 {
 	padding: 0.5em 0.5em 1em;
     font-size: 1.25em!important;
 	margin: 0!important;
-	color: #30A464;
+	color: #69A875;
 }
 
 .subhead {
@@ -345,7 +359,7 @@ h1 {
   padding: 0 1em 1em;
   font-size: 1em!important;
   margin: 0;
-  color: #D04B41;
+  color: #37314B;
   letter-spacing: 4px;
 }
 
@@ -358,7 +372,7 @@ h1 {
 .bg-link {
 	border: 1px solid;
 	padding: 0.5em;
-	color: #30A464;
+	color: #69A875;
 	text-decoration: none;
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
@@ -370,14 +384,14 @@ h1 {
 }
 
 .bg-link:hover {
-	background-color: #D04B41;
-	border: 1px solid #D04B41;
+	background-color: #37314B;
+	border: 1px solid #37314B;
 	color: #FFF;
 }
 
 .dot {
 	display: none;
-	color: #D04B41;
+	color: #37314B;
 	font-size: 2em;
 	vertical-align: middle;
 	margin: 0;
@@ -390,7 +404,7 @@ h1 {
 	padding: 0px; 
 }
 .side-bar-menu{
-	border: 1px solid  #30A464;
+	border: 1px solid  #69A875;
 	border-bottom:none;
 	list-style-type: none;
 	margin:0px;
@@ -403,7 +417,7 @@ h1 {
 .side-bar-menu a {
 	padding: 0.5em;
 	margin:0;
-	color: #30A464;
+	color: #69A875;
 	text-decoration: none;
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
@@ -412,11 +426,11 @@ h1 {
 	display: block;
 	width: 100%;
 	text-decoration: none;
-	border-bottom: 1px solid  #30A464;
+	border-bottom: 1px solid  #69A875;
 	transition: all 0.8s ease;
 }
 .side-bar-menu a:hover {
-	background-color: #D04B41;
+	background-color: #37314B;
 	color: #FFF;
 }
 
@@ -442,9 +456,8 @@ nav#slide-menu {
 	width: 100%;
 	max-width: 141px;
 	height: 100%;
-	  background-color: #D04B41;
+	  background-color: #37314B;
 	overflow-x: hidden;
-overflow-y: scroll;
   z-index: 99999;
 
 	-moz-transition: all 300ms;
@@ -535,7 +548,7 @@ transition: all 300ms;
 			display: inline-block;
 			width: 36px;
 			height: 36px;
-			color: #30A464;
+			color: #69A875;
 			font-family: "icomoon";
 			font-style: normal;
 			font-size: 1.2em;
@@ -554,7 +567,7 @@ transition: all 300ms;
 		}
 
 		.menu-trigger:hover:before { 
-			color: #D04B41;
+			color: #37314B;
 		}
 
 		.menu-active .menu-trigger:after { 
@@ -562,7 +575,7 @@ transition: all 300ms;
 			display: inline-block;
 			width: 36px;
 			height: 36px;
-			color: #D04B41;
+			color: #37314B;
 			background-color: #FFF;
 			font-family: "icomoon";
 			font-style: normal;
@@ -578,7 +591,7 @@ transition: all 300ms;
 		}
 
 		.menu-trigger:hover:after {
-			color: #30A464;
+			color: #69A875;
 		}
 
 body.menu-active div#content { right: 141px;}
@@ -597,7 +610,7 @@ padding: 0;
 }
 
 .searchbox .body {
-  color: #30A464;
+  color: #69A875;
   text-align: center;
   padding: 3px 0;
 }
@@ -636,7 +649,7 @@ margin-bottom: 0px!important;
 }
 
 .gsst_a .gscb_a {
-color: #30A464!important;
+color: #69A875!important;
 cursor: pointer;
 }
 
@@ -668,7 +681,7 @@ border-radius: 0!important;
 -moz-border-radius: 0!important;
 -webkit-border-radius: 0!important;
 border-color: none!important;
-background-color: #D04B41!important;
+background-color: #37314B!important;
 background-image: none!important;
 filter: none!important;
 }
@@ -703,22 +716,22 @@ display: none;
 }
 
 .gs-webResult.gs-result a.gs-title:visited, .gs-webResult.gs-result a.gs-title:visited b, .gs-imageResult a.gs-title:visited, .gs-imageResult a.gs-title:visited b {
-    color: #D04B41!important;
+    color: #69A875!important;
 }
 
 .gs-webResult.gs-result a.gs-title:link, .gs-webResult.gs-result a.gs-title:link b, .gs-imageResult a.gs-title:link, .gs-imageResult a.gs-title:link b {
-    color: #D04B41!important;
+    color: #69A875!important;
 }
 
 .gsc-results .gsc-cursor-box .gsc-cursor-current-page {
     border-color: #FFF;
     background-color: #FFFFFF!important;
-    color: #D04B41!important;
+    color: #69A875!important;
 }
 
 /*UPCOMING DATES*/
 .date {
-	background-color: #D04B41;
+	background-color: #37314B;
   padding: 0.5em;
   color: #FFF;
   font-family: 'Lato', sans-serif;
@@ -731,7 +744,7 @@ display: none;
 }
 
 .past-text {
-	color: #D04B41;
+	color: #37314B;
 }
 
 .events {
@@ -744,7 +757,7 @@ padding-bottom: 0;
 
 /* FOOTER */
 footer {
-  background-color: #30A464;
+  background-color: #69A875;
   color: #FFF;
   padding: 1em;
 }
@@ -765,7 +778,7 @@ footer a {
 }
 
 footer a:hover {
-	color: #D04B41;
+	color: #37314B;
 	border-bottom: 1px solid;
 }
 
@@ -775,7 +788,7 @@ footer form {
 
 footer input[type="submit"], footer input[type="reset"] {
   background-color: #FFF;
-  color: #30A464;
+  color: #69A875;
 }
 
 footer input[type="submit"]:hover, footer input[type="reset"]:hover {
@@ -805,14 +818,14 @@ textarea {
 }
 
 .copyright a {
-	color: #30A464;
+	color: #69A875;
 	text-transform: uppercase;
 	text-decoration: none;
 	transition: all 0.8s ease;
 }
 
 .copyright a:hover {
-	color: #D04B41;
+	color: #37314B;
 	border-bottom: 1px solid;
 }
 
@@ -839,7 +852,7 @@ textarea {
 /* ---------------- ---------------------- */
 /* ACCOMMODATION */
 .ls-select-box:hover {
-	background-color: #D04B41;
+	background-color: #37314B;
 	color: #FFF;
 }
 
@@ -932,7 +945,7 @@ textarea {
 input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
-  background-color: #30A464;
+  background-color: #69A875;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   color: #FFF;
@@ -947,7 +960,7 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 }
 
 input[type="reset"]:hover, input[type="submit"]:hover {
-  background-color: #D04B41;
+  background-color: #37314B;
 }
 
 .paypal table {
@@ -971,12 +984,12 @@ input[type="reset"]:hover, input[type="submit"]:hover {
 }
 
 .accommodation td {
-	border: 1px solid #30A464;
+	border: 1px solid #69A875;
 	padding: 0 1em;
 }
 
 .bottom-border {
-	border-bottom: 1px solid #D04B41;
+	border-bottom: 1px solid #37314B;
 	padding-top: 1em;
 }
 
@@ -1285,7 +1298,7 @@ footer {
     min-height: 360px;
 	}
 
-			.flex-img {
+	.flex-img {
   max-height: 366px;
 }
 
@@ -1314,7 +1327,7 @@ footer {
 
 	.cbp-af-inner nav .dot {
   		font-size: 1em;
-  		color: #D04B41;
+  		color: #37314B;
   		padding: 0 0.4em;
 	}
 
@@ -1324,7 +1337,7 @@ footer {
 	}
 
 	.cbp-af-header nav a:hover {
-	background-color: #D04B41;
+	background-color: #37314B;
 	padding: 1em 0.1em;
 	color: #FFF!important;
 	}
@@ -1346,7 +1359,7 @@ h1 {
 
 .subhead {
   padding: 0 1em 1.5em;
-  color: #30A464;
+  color: #69A875;
 }
 
 .main-content {
@@ -1376,7 +1389,7 @@ h2 {
   padding: 0.5em;
   background-color: transparent;
   color: #000;
-  border-right: 1px solid #30A464;
+  border-right: 1px solid #69A875;
     font-weight: 500;
 }
 
@@ -1405,19 +1418,18 @@ footer form {
 /* 1100 PX */
 @media only screen and (min-width: 68em) {
 	.cbp-af-header nav a {
-  font-size: 0.7em!important;
+  font-size: 0.9em!important;
 }
 
 .bg {
 		background-color: rgba(0,0,0,0.65);
 		position: relative;
 		text-align: center;
-		padding: 36px 0;
+		padding: 36px 0px 0px 0px;
     min-height: 366px;
 	}
-
-			.flex-img {
-  max-height: 393px;
+.flex-img {
+  /*max-height: 393px;*/
 }
 
 @-moz-document url-prefix() {
@@ -1453,15 +1465,14 @@ footer form {
 }
 
 .date-title {
-  font-weight: 600;
+  font-weight: 700;
 }
 .reg {
-  font-weight: 600;
+  font-weight: 700;
 }
 .bg {
-    min-height: 393px;
+    /*min-height: 393px;*/
 	}
-
 	@-moz-document url-prefix() {
 		.bg {
 			background-color: rgba(0,0,0,0.7);
@@ -1479,14 +1490,14 @@ footer form {
   padding: 8px 2em 1em!important;
 }
 .cbp-af-header nav a {
-  font-size: 0.9em!important;
+  font-size: 1em!important;
 }
 }
 
 /* 1440 PX */
 @media only screen and (min-width: 90em) {
 .cbp-af-header nav a {
-  font-size: 0.95em!important;
+  font-size: 1em!important;
 }
 }
 
@@ -1496,6 +1507,7 @@ footer form {
   font-size: 1em!important;
 }
 }
+
 /* contact us */
 .half {
   float: left;
