--- a/_includes/congress-info.html
+++ b/_includes/congress-info.html
@@ -1,5 +1,5 @@
-<p class="body">ICNB'18 is part of the 3<sup>rd</sup> World Congress on Recent 
-Advances in Nanotechnology (RAN'18). 
+<p  class="announcement-text"><strong>ICNB'18</strong> is part of the <strong>3<sup>rd</sup> World Congress on Recent 
+Advances in Nanotechnology (RAN'18)</strong>. 
 <a class="body-link" target="_blank" href="https://www.rancongress.com">Congress Website</a> | 
 <a class="body-link" target="_blank" href="RAN18_CFP_Flyer.pdf">Congress Flyer</a></p>
 
