--- a/_includes/upcoming-dates.html
+++ b/_includes/upcoming-dates.html
@@ -1,17 +1,17 @@
 <h2>Upcoming Dates</h2>
 
-<p>Dates will be announced soon.<br> Thank you for your patience!</p>
-
-<!--<div class="grid events">
+<!--<p>Dates will be announced soon.<br> Thank you for your patience!</p>
+-->
+<div class="grid events">
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
   <div class="date">
-    Feb. 1, 2018
+    Oct. 4, 2018
   </div>
 </div>
 
 <div class="unit unit-s-1 unit-m-3-4 unit-l-3-4">
   <div class="unit-spacer">
-    Extended <br>Paper Submission Deadline
+    Paper Submission Deadline
   </div>
 </div>
 </div>
@@ -19,13 +19,13 @@
 <div class="grid events">
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
   <div class="date">
-    Feb. 8, 2018
+    Nov. 2, 2018
   </div>
 </div>
 
 <div class="unit unit-s-1 unit-m-3-4 unit-l-3-4">
   <div class="unit-spacer">
-    Extended <br>Notification to Authors
+   Notification to Authors
   </div>
 </div>
 </div>
@@ -33,15 +33,15 @@
 <div class="grid events">
 <div class="unit unit-s-1 unit-m-1-4 unit-l-1-4">
   <div class="date">
-    Feb. 20, 2018
+    Nov. 16, 2018
   </div>
 </div>
 
 <div class="unit unit-s-1 unit-m-3-4 unit-l-3-4">
   <div class="unit-spacer">
-    Extended <br>Early-Bird Registration
+    Early-Bird Registration
   </div>
 </div>
-</div>-->
+</div>
 
 
